2004-07-29  Nathan Sidwell  <nathan@codesourcery.com>

	* gcov-io.h: Allow zero tag as EOF indicator.
	(gcov_is_eof): Remove.
	(gcov_truncate): Remove.
	* gcov-io.c (gcov_seek): Always SEEK_SET.
	* libgcov.c (gcov_exit): Don't use gcov_truncate.  Write explicit
	EOF tag.
	* coverage.c (read_counts_file): Don't use gcov_is_eof.
	* gcov-dump.c (dump_file): Likewise.
	* gcov.c (read_graph_file, read_count_file): Likewise.

	* c-decl.c (complete_array_type): Don't gratuitously copy
	maxindex.  Check it always has a type.

2004-07-29  Steven Bosscher  <stevenb@suse.de>

	* rtl.c (currently_expanding_to_rtl): New.
	* rtl.h (currently_expanding_to_rtl): Export it.
	* cfgexpand.c (tree_cfg_expand): Set/clear it at entry/exit.

	* config/alpha/alpha.c (alpha_expand_mov): Remove old RTL
	inliner hack.
	* config/sh/sh.c: Replace rtx_equal_function_value_matters
	with currently_expanding_to_rtl.
	* config/sh/sh.md: Likewise.
	* config/ia64/ia64.c (got_symbolic_operand): Likewise.

2004-07-29  Alexandre Oliva  <aoliva@redhat.com>

	Introduce sh2a support.
	2004-07-29  Alexandre Oliva  <aoliva@redhat.com>
	* config.gcc: Build multilibs for sh2a and sh2a-single by
	default.
	* config/sh/sh.h (SUPPORT_SH2A, SUPPORT_SH2A_SINGLE): Define by
	default.  Split their tests out of the corresponding SH4
	multilibs.
	* config/sh/t-sh (MULTILIB_MATCHES): Don't ever use SH4 or SH4a
	multilibs for SH2a.
	2004-07-28  Alexandre Oliva  <aoliva@redhat.com>
	* config.gcc: Handle sh2a multilibs and cpu selection.
	* config/sh/sh.h: Likewise.  Handle sh2a command line flags.
	* config/sh/t-mlib-sh2a: New.
	* config/sh/t-mlib-sh2a-nofpu: New.
	* config/sh/t-mlib-sh2a-single: New.
	* config/sh/t-mlib-sh2a-single-only: New.
	2004-07-09  Nick Clifton  <nickc@redhat.com>
	Issue 43400
	* config/sh/sh.h (DRIVER_SELF_SPECS): Issue an error message if
	-ml and -m2a are used together.
	2004-03-23  DJ Delorie  <dj@redhat.com>
	* config/sh/sh.c (sh_builtin_saveregs): Use the double code only